# genicam_cvb

./: CMakeLists.txt  README.md  package.xml
calib/: imperx_1.yaml  imperx_2.yaml  imperx_3.yaml  imperx_4.yaml  jai_5000_c.yaml  jai_5000_m.yaml  visualize_camera_calibration.m
debugging/: README.md  time_behaviour.ipynb
driver/: IPX-1M48-VC_1.ini  IPX-1M48-VC_1_Timo.ini  IPX-1M48-VC_2.ini  IPX-1M48-VC_2_Timo.ini  IPX-1M48-VC_3.ini  IPX-1M48-VC_3_Timo.ini  IPX-1M48-VC_4.ini  IPX-1M48-VC_4_Timo.ini  SP-5000C-GE2_5.ini  SP-5000M-GE2_1.ini  SP-5000M-GE2_2.ini  SP-5000M-GE2_3.ini  SP-5000M-GE2_4.ini  start.txt
include/arghandler/: arghandler.h
include/genicam/: genicam.hpp
launch/: example_jai_c.launch  example_jai_m.launch  imperx.launch  jai_c.launch  jai_m.launch  start_all_cameras_wo_ptp_trigger.launch  twb_camera.launch  twb_camera_2.launch
src/: arghandler.cpp  genicam.cpp  genicam_node.cpp
